--- a/subscription-project/cmd/web/templates/plans.page.gohtml
+++ b/subscription-project/cmd/web/templates/plans.page.gohtml
@@ -1,10 +1,11 @@
 {{template "base" .}}
 
 {{define "content" }}
+    {{$user := .User}}
     <div class="container">
         <div class="row">
             <div class="col-md-8 offset-md-2">
-                <h1 class="mt-5">Plnas</h1>
+                <h1 class="mt-5">Plans</h1>
                 <hr>
                 <table class="table table-compact table-striped">
                     <thead>
@@ -15,14 +16,20 @@
                         </tr>
                     </thead>
                     <tbody>
-                        {{range index .Data "plan"}}
+                        {{range index .DataMap "plans"}}
                             <tr>
                                 <td>{{.PlanName}}</td>
                                 <td class="text-center">{{.PlanAmountFormatted}}/month</td>
                                 <td class="text-center">
+                                    {{if and ($user.Plan) (eq $user.Plan.ID .ID)}}
+                                        <strong>
+                                            Current Plan
+                                        </strong>
+                                    {{else}}
                                     <a class="btn btn-primary btn-sm" href="#!" onclick="selectPlan('{{.ID}}', '{{.PlanName}}')">
                                         Select
                                     </a>
+                                    {{end}}
                                 </td>
                             </tr>
                         {{end}}
@@ -45,7 +52,7 @@
                 confirmButtonText: "Subscribe"
             }).then((result) => {
                 if (result.isConfirmed) {
-                    window.location.href = "/subscribe?id" + x
+                    window.location.href = "/members/subscribe?id=" + x
                 }
             })
         }
